Se pone en css y el favicon

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <meta charset="utf-8">
-    <meta name=""
+    <meta name="author" content="David Aguirre Ruiz">
+    <meta name="description" content="Trabajo en clase usando un wireframe establecido por el profesor Nicolas">
+    <meta name="keywords" content="web,diseño,diseño grafico, diseño gráfico,diseño web,html,css,programación sena, programacion SENA"
+    <link rel="icon" href="imagenes/favicond.png"
+    <link rel="stylesheet" media="all" type="text/css" href="estilogeneral.css"
     <title>Box Model</title>
   </head>
   <body>
