Creación de la barra de navegacion sin HTML

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <title>Box Model</title>
   </head>
   <body>
+    <nav>
+    <a href=""> Home</a>
+    <a href=""> Secciones</a>
+    <a href=""> Listas</a>
+    <a href=""> Filtros</a>
+    </nav>
 
   </body>
 </html>
