Alienar CSS con HTML

--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta name="author" content="David Aguirre Ruiz">
     <meta name="description" content="Trabajo en clase usando un wireframe establecido por el profesor Nicolas">
     <meta name="keywords" content="web,diseño,diseño grafico, diseño gráfico,diseño web,html,css,programación sena, programacion SENA"
-    <link rel="icon" href="imagenes/favicond.png"
-    <link rel="stylesheet" media="all" type="text/css" href="estilogeneral.css"
-    <title>Box Model</title>
+    <link rel="icon" href="imagenes/favicond.png">
+    <link rel="stylesheet" media="all" type="text/css" href="css/estilogeneral.css" >
+    <title> Box Model </title>
   </head>
   <body>
+    <!-- Barra de Navegacion-->
     <nav>
-    <a href=""> Home</a>
+    <a href="index.html"> Home</a>
     <a href=""> Secciones</a>
     <a href=""> Listas</a>
-    <a href=""> Filtros</a>
+    <a href=""> Filtros</a>s
     </nav>
+
+
 
   </body>
 </html>
