Creación de la barra de navegación
Tiene las descripciones de como hacerlo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="index.html"> Home</a>
     <a href=""> Secciones</a>
     <a href=""> Listas</a>
-    <a href=""> Filtros</a>s
+    <a href=""> Filtros</a>
     </nav>
 
 
