Se ponen los archivos de navegación
Se crean los HTML de cada una de las páginas. Se copia el HTML index en todos y se le cambian los títulos.

--- a/pag2.html
+++ b/pag2.html
@@ -19,7 +19,7 @@
     </nav>
     <!-- Título -->
     
-      <h1> ARTÍCULO BÁSICO</h1>
+      <h1>SECCIONES</h1>
       
     <!-- Footer-->
       <footer>
