--- a/filtros.html
+++ b/filtros.html
@@ -19,7 +19,7 @@
     </nav>
     <!-- Título -->
     
-      <h1> ARTÍCULO BÁSICO</h1>
+      <h1>FILTROS</h1>
       
     <!-- Footer-->
       <footer>
@@ -30,3 +30,4 @@
 
   </body>
 </html>
+
