--- a/secciones.html
+++ b/secciones.html
@@ -19,7 +19,7 @@
     </nav>
     <!-- Título -->
     
-      <h1> ARTÍCULO BÁSICO</h1>
+      <h1>SECCIONES</h1>
       
     <!-- Footer-->
       <footer>
